# Income-Statement-App

./: .env  .env.example  .gitignore  LICENSE  README.md  build.py  build.spec  debug_locks.py  lawyer_data.db  main.py  output.xlsx  pyproject.toml  pyside_main.py  requirements.txt  run.py  sqlite_db.db  try.py  程式用_第三季收入 - 複製.xls
.agent/: allowed_commands.md
.agent/workflows/: branch.md  commit.md  git.md
Old-Desktop-App/: requirements.txt
Old-Desktop-App/controllers/: base.py
Old-Desktop-App/models/worksheets/: base.py  separate_account.py
Old-Desktop-App/utils/: check_filename.py
Old-Desktop-App/views/: main_view.py
app/: __init__.py
app/application/ports/: gateways.py  repositories.py
app/application/use_cases/: auto_fill.py  import_excel.py  separate_ledger.py
app/common/: types.py  version.py
app/domain/dto/: alias.py  auto_fill.py  code_replacement.py  file_source.py  lawyer.py  separate_ledger.py  statement.py
app/infrastructure/db/: alias.py  code_replacement.py  lawyer.py  session.py
app/infrastructure/gateways/: excel_report_gateway.py  nicegui_interaction.py
app/infrastructure/repositories/: excel_pandas_repo.py  sqla_alias_repo.py  sqla_code_replacement_repo.py  sqla_lawyer_repo.py
app/main/: __init__.py  routes.py
app/services/: update_manager.py
app/ui/pages/: database_page.py  statement_editor_page.py
app/ui/routers/: home.py
app/ui/state/: app_store.py
app/ui/styles/: theme.css
app/ui/viewmodels/: database_vm.py  statement_vm.py
controllers/: __init__.py  main_controller.py
data/db/: sqlite_db.db
db/: database.py
db/crud/: lawyer.py
devtools/: auto_reload.py  fast_build.bat  migrate_imports.py  prune_build.py  test_imports.py
docs/: index.md
docs/explanation/architecture/: index.md  nicegui-mvvm.md
docs/explanation/deployment/: auto-update-strategy.md
docs/explanation/ui-ux/: modern-interface.md  style-guide.md
docs/how-to/development/: setup.md
docs/reference/: guardrails.md  index.md
docs/requirements/service/: core-workflows.md  lawyer-code-aliases.md
material_app/: __init__.py  app.py  main_window.py  workflow_page.py
material_app/controllers/: app_controller.py  workflow_controller.py
material_app/data/: sqlite_db.db
material_app/dialogs/: __init__.py  lawyer_selection_dialog.py
material_app/models/: __init__.py  dto.py  state.py
material_app/models/db/: base.py  lawyer.py
material_app/models/dto/: lawyer_dto.py
material_app/services/: __init__.py  compute.py  repo.py  workflow_service.py  worksheets.py
material_app/services/dao/: __init__.py  lawyer_dao.py  session.py
material_app/theme/: __init__.py
material_app/utils/: __init__.py  validation.py
material_app/views/: __init__.py  main_window.py
material_app/views/dialogs/: lawyer_selection_dialog.py
material_app/views/pages/: __init__.py  database_page.py  workflow_page.py
models/: worksheet.py
models/worksheets/: __init__.py  base.py  separate_account.py  summary_table_of_lawyer_income_statistics.py
src/: __init__.py  app.py  main.py
src/application/ports/: gateways.py  repositories.py
src/application/use_cases/: auto_fill.py  import_excel.py  separate_ledger.py
src/common/: errors.py
src/controllers/: __init__.py  app_controller.py  workflow_controller.py
src/controllers_legacy/: workflow_controller.py
src/data/: sqlite_db.db
src/income_statement_app/: __init__.py  __main__.py  main.py
src/models/: __init__.py  state.py
src/momshelperquart/: run.py
src/services/: __init__.py  excel_report_service.py  update_manager.py  update_service.py  workflow_service.py  worksheets.py
src/theme/: __init__.py
src/ui/: interaction.py  layout.py  main.py  theme.py
src/utils/: __init__.py  validation.py
src/views/: main_window.py
src/views_legacy/: __init__.py
test/: test.py  test2.py  test3.py
ttk_app/: __init__.py  main.py  try.py
ttk_app/controllers/: base.py  main_controller.py
ttk_app/db/: database.py
ttk_app/utils/: __init__.py  check_filename.py
ttk_app/views/: main_view.py  main_view_old.py
utils/: get_path.py  logger.py
views/: main_view.py  main_view_old.py
views/custom_widgets/: __init__.py  placeholder_entry.py
(+138 files in other folders)
