[project]
name = "mom-work-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pyside6>=6.10.1",
    "python-dotenv>=1.2.1",
    "qt-material>=2.17",
    "quart>=0.20.0",
    "requests>=2.31.0",
    "scipy>=1.16.3",
    "sqlalchemy>=2.0.44",
    "watchdog>=6.0.0",
    "xlrd>=2.0.2",
    "pyinstaller>=6.3.0",
]

[project.scripts]
start = "src.app:run"

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "ruff>=0.14.8",
]

