[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "income-statement-app"
version = "0.1.9"
description = "A helper application for ledger separation and accounting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "nicegui>=1.4.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pywebview>=6.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.44",
    "watchdog>=6.0.0",
    "xlrd>=2.0.2",
]

[project.scripts]
start = "main:run"

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "briefcase>=0.3.26",
    "nuitka>=2.8.9",
    "pillow>=12.1.0",
    "pyinstaller>=6.17.0",
    "ruff>=0.14.8",
    "zstandard>=0.25.0",
]

[tool.briefcase]
project_name = "Income-Statement-App"
bundle = "com.arfiligol"
version = "0.1.5"
url = "https://github.com/arfiligol/Income-Statement-App"
license.file = "LICENSE"
author = "arfiligol"

[tool.briefcase.app.income_statement_app]
formal_name = "Income-Statement-App"
description = "A helper application for ledger separation."
long_description = "A helper application for accounting and ledger separation."
sources = ["app"]
requires = [
    "colorlog>=6.10.1",
    "nicegui>=1.4.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pywebview>=6.1",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.44",
    "watchdog>=6.0.0",
    "xlrd>=2.0.2",
]

[tool.briefcase.app.income_statement_app.macOS]
requires = [
    "std-nslog>=1.0.0",
]

[tool.briefcase.app.income_statement_app.linux]
requires = [
    "systemd-python>=234",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
[tool.briefcase.app.income_statement_app.windows]
requires = []

